--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
 
     <div id="login-feedback"></div>
 
-    <p style="margin-top:12px;">Don't have an account? <a href="signup.html">Sign up</a></p>
+    <p style="margin-top:12px;">Don't have an account? <a href="W-savings/signup.html">Sign up</a></p>
     <p style="margin-top:6px;"><a href="#" onclick="clearDemo()">Clear demo data (local only)</a></p>
     <footer style="margin-top:14px;font-size:13px;color:#777">&copy; 2025 Wonder Savings</footer>
   </div>
@@ -83,3 +83,4 @@
   </script>
 </body>
 </html>
+
